# plico

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  GEMINI.md  README.md  README_zh.md  agent_secret.key  kg.redb  system-v2.md  system-v3.md  system.md  usage_index.json
--help/: agent_secret.key
.claude/: scheduled_tasks.json  settings.json
bench/: embedding_model_compare.py  judge.py  phase0_ab_results.json  plico_client.py
benchmarks/: .gitignore  README.md  pyproject.toml
benchmarks/configs/: benchmark.yaml  embedding_models.yaml  judge_prompts.yaml
benchmarks/docs/: benchmark_report_v44.md  benchmark_report_v44_comparison.md
benchmarks/scripts/: embedding_server.py  run_all.sh  run_full_benchmark.sh  run_suite.sh  setup.sh
benchmarks/src/plico_benchmarks/: __init__.py  __main__.py  cli.py
benchmarks/src/plico_benchmarks.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
benchmarks/src/plico_benchmarks/core/: __init__.py  cache.py  client.py  config.py  embedding.py  harness.py  judge.py  llm.py  metrics.py  reporter.py
benchmarks/src/plico_benchmarks/suites/: __init__.py  base.py  conversational_qa.py  kg_reasoning.py  memory_crud.py  performance.py  retrieval.py  temporal_reasoning.py
docs/: PWP.md  ai thinking.md  audit-2026-04-25.md  audit-soul-alignment.md  baseline_benchmark_v38_zh.md  benchmark-2026-04-25.md  benchmark-report-2026-04-27.md  benchmark-report-final-2026-04-27.md  benchmark_report_v37.md  benchmark_report_v37_zh.md  benchmark_report_v38_zh.md  design-node10-rectification.md  design-node11-landing.md  design-node12-awareness.md  design-node13-conduction.md  design-node14-fusion.md  design-node15-verify.md  design-node16-sustain.md  design-node17-trust.md  design-node18-boundary.md  design-node19-sentinel.md  design-node2-aios.md  (+46 more)
(+358 files in other folders)
